# bet-scraper

./: main.py  pyproject.toml
docs/: example.env  requirements.md
